# documentdb-benchmarks

./: .gitignore  CONTRIBUTING-benchmark-workflow.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  index.html  pyproject.toml  test_website.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml
benchmark_analyzer/: __init__.py  __main__.py  analyzer.py  comparator.py  report_generator.py  report_loader.py
benchmark_runner/: __init__.py  __main__.py  base_benchmark.py  config.py  runner.py
benchmark_runner/benchmarks/: __init__.py
benchmark_runner/data_generators/: __init__.py  document_256byte.py  document_standard.py
config/count/: count_base.yaml
config/insert/: insert_base.yaml  insert_composite_index.yaml  insert_composite_index_sharded.yaml  insert_no_index.yaml  insert_no_index_sharded.yaml  insert_single_path_index.yaml  insert_single_path_index_sharded.yaml  insert_unique_index.yaml  insert_unique_index_sharded.yaml  insert_wildcard_index.yaml  insert_wildcard_index_sharded.yaml
css/: style.css
data/: index.json
deploy/: pipeline-ci.config.template  pipeline-common.sh  pipeline.config  pipeline.config.template  post-startup.sh  publish_results.py  run-aci.sh  run-devcontainer.sh  run-local.sh
js/: app.js  charts.js  compare.js  dashboard.js
tests/: test_comparator.py  test_config.py  test_count_benchmarks.py  test_insert_benchmarks.py  test_insert_common.py  test_publish_results.py  test_runner.py
(+44 files in other folders)
